# GuardStack

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
charts/guardstack/: Chart.yaml  values.yaml
charts/guardstack/templates/: _helpers.tpl  configmap.yaml  deployment-worker.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml  workflow-template.yaml
docker/: Dockerfile.worker
docs/: api-reference.md  architecture.md  deployment.md  getting-started.md
docs/pillars/: genai.md  predictive.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_embeddings.py  003_add_agentic_tables.py  004_add_dashboard_tables.py
pkg/guardstack/: index.ts  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
pkg/guardstack/components/: BeforeAfterChart.vue  ComplianceStatus.vue  EvaluationTimeline.vue  FindingsTable.vue  ModelCard.vue  PillarCard.vue  PillarRadar.vue  PillarScoreCard.vue  ProgressTracker.vue  RiskIndicator.vue  RiskSummaryCard.vue  ScoreGauge.vue  StatusBadge.vue  TrendChart.vue  index.ts
pkg/guardstack/composables/: index.ts  useWebSocket.ts
pkg/guardstack/e2e/: dashboard.spec.ts  evaluations.spec.ts  models.spec.ts  settings.spec.ts
pkg/guardstack/l10n/: en-us.yaml
pkg/guardstack/pages/: dashboard.vue
pkg/guardstack/pages/agentic/: index.vue  sessions.vue  tools.vue
pkg/guardstack/pages/compliance/: eu-ai-act.vue  (+1 more)
pkg/guardstack/routing/: index.ts
pkg/guardstack/services/: api.ts  index.ts
pkg/guardstack/src/: index.ts  routes.ts
pkg/guardstack/store/: dashboard.ts  evaluations.ts  index.ts  models.ts
pkg/guardstack/tests/: setup.ts
pkg/guardstack/types/: index.ts
scripts/: init-db.sql
src/guardstack/: __init__.py  config.py  main.py
src/guardstack/agentic/: __init__.py  evaluator.py  interceptor.py  sandbox.py  tool_security.py
src/guardstack/api/: __init__.py  dependencies.py
src/guardstack/compliance/: __init__.py  assessor.py  frameworks.py  mapper.py  reporter.py
src/guardstack/connectors/: __init__.py  base.py  registry.py
src/guardstack/genai/: __init__.py  evaluator.py
src/guardstack/guardrails/: __init__.py  filters.py  nemo_adapter.py  policies.py  runtime.py
src/guardstack/models/: __init__.py  core.py  evaluation.py
src/guardstack/observability/: __init__.py  metrics.py  telemetry.py
src/guardstack/predictive/: __init__.py  evaluator.py
src/guardstack/scoring/: __init__.py  aggregator.py  normalizer.py  thresholds.py  weights.py
src/guardstack/services/: __init__.py  argo.py  auth.py  cache.py  connectors.py  database.py  guardrails.py  storage.py
src/guardstack/spm/: __init__.py  checks.py  inventory.py  policies.py  scanner.py
src/guardstack/workers/: __init__.py  celery_app.py
src/guardstack/workflows/: __init__.py  argo_client.py  templates.py
tests/: conftest.py  test_agentic.py  test_api.py  test_connectors.py  test_genai.py  test_predictive.py  test_spm.py
(+88 files in other folders)
