[project]
name = "guardstack"
version = "0.1.0"
description = "AI Safety & Security Platform - Open source alternative to Chatterbox Labs AIMI"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "GuardStack Contributors" }
]
keywords = ["ai", "safety", "security", "ml", "llm", "guardrails", "kubernetes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "websockets>=12.0",
    
    # Argo Workflows
    "argo-workflows>=6.0.0",
    "kubernetes>=28.0.0",
    
    # Evaluation - Explainability
    "shap>=0.44.0",
    "lime>=0.2.0",
    "captum>=0.7.0",
    
    # Evaluation - Adversarial
    "garak>=0.9.0",
    "adversarial-robustness-toolbox>=1.17.0",
    
    # Evaluation - Fairness
    "fairlearn>=0.10.0",
    "aif360>=0.6.0",
    
    # Evaluation - Toxicity/PII
    "detoxify>=0.5.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    
    # Evaluation - Privacy
    "tensorflow-privacy>=0.9.0",
    
    # Guardrails
    "nemoguardrails>=0.7.0",
    
    # LLM Abstraction
    "litellm>=1.0.0",
    
    # Embeddings
    "sentence-transformers>=2.3.0",
    
    # Storage
    "boto3>=1.34.0",
    "minio>=7.2.0",
    
    # OpenTelemetry - Observability
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "opentelemetry-instrumentation-celery>=0.43b0",
    "opentelemetry-propagator-b3>=1.22.0",
    
    # Utils
    "httpx>=0.26.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
guardstack = "guardstack.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guardstack"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
